tests/errors/generic-enum-constructor-arity.ari
fn main() -> i64 {
  let value = Some<i64, bool>(1);
  return 0;
}
